--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,29 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.github.liangp</groupId>
-  <artifactId>spring-cloud-starter-zuul-dynamic</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+	<groupId>io.github.supreme94</groupId>
+	<artifactId>spring-cloud-starter-zuul-dynamic</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-  <name>spring-cloud-starter-zuul-dynamic</name>
-  <url>http://maven.apache.org</url>
+	<name>spring-cloud-starter-zuul-dynamic</name>
+	<url>http://maven.apache.org</url>
 
-  <properties>
+	<licenses>
+		<license>
+			<name>The Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
+
+	<scm>
+		<connection>scm:git:https://github.com/supreme94/spring-cloud-starter-zuul-dynamic.git</connection>
+		<developerConnection>scm:git:git@github.com:supreme94/spring-cloud-starter-zuul-dynamic.git</developerConnection>
+		<url>https://github.com/supreme94/spring-cloud-starter-zuul-dynamic</url>
+	</scm>
+
+	<properties>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<java.version>1.8</java.version>
@@ -18,7 +31,15 @@
 		<spring-cloud-netflix.version>1.3.1.RELEASE</spring-cloud-netflix.version>
 	</properties>
 
-<!-- 	<build>
+	<developers>
+		<developer>
+			<id>liangp</id>
+			<email>liangpeng0717@gmail.com</email>
+			<name>Liang Peng</name>
+		</developer>
+	</developers>
+
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -48,8 +69,23 @@
 					<additionalparam>-Xdoclint:none</additionalparam>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.5</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
-	</build> -->
+	</build>
 
 	<distributionManagement>
 		<snapshotRepository>
